a1/brendan_gordon/TEST_PROGRAMS/invalidtype/lucas_stinchcombe/undeclared.min
# Computes the sequence of Lucas numbers for n=20
# Lucas Numbers are an instance of Lucas sequences starting with L0=2, L1=1


l1 = 2;
l2 = 1;
n = 20;
l3 = 0;

print sum;
print l2;

while n do
  l3 = l1 + l2;
  print l3;
  l1 = l2;
  l2 = l3;
  n = n - 1;
done

